--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Agroec Comprador",
+  "name": "Agroec_Comprador",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -23,18 +23,21 @@
     "@ionic/vue-router": "^7.0.0",
     "@splidejs/vue-splide": "^0.6.12",
     "apexcharts": "^3.44.0",
+    "axios": "^1.7.4",
     "flowbite": "^2.2.1",
     "flowbite-vue": "^0.1.2",
     "i": "^0.3.7",
     "ionicons": "^7.0.0",
     "npm": "^10.5.1",
     "remove": "^0.1.5",
+    "socket.io-client": "^4.7.5",
+    "sweetalert2": "^11.12.4",
     "vue": "^3.2.45",
     "vue-localstorage": "^0.6.2",
     "vue-multiselect": "^3.0.0-beta.3",
-    "vue-router": "^4.1.6",
-    "vue-slick-carousel": "^1.0.6",
-    "vue-sweetalert2": "^5.0.5",
+    "vue-router": "^4.4.3",
+    "vue-slick-carousel": "^1.0.5",
+    "vue-sweetalert2": "^5.0.11",
     "vue3-apexcharts": "^1.4.4",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.1.0"
@@ -44,18 +47,21 @@
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/language-core": "^2.0.29",
     "@vue/test-utils": "^2.3.0",
     "autoprefixer": "^10.4.19",
-    "cypress": "^12.7.0",
+    "cypress": "^13.13.3",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
+    "nodemon": "^3.1.4",
     "postcss": "^8.4.38",
+    "semver": "^7.6.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^0.32.2",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^2.0.29"
   },
   "description": "An Ionic project"
 }
