--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
   "dependencies": {
     "@capacitor/android": "5.4.1",
     "@capacitor/app": "^5.0.6",
-    "@capacitor/core": "5.4.1",
+    "@capacitor/core": "^5.4.1",
     "@capacitor/haptics": "^5.0.6",
     "@capacitor/keyboard": "^5.0.6",
     "@capacitor/status-bar": "^5.0.6",
     "@coreui/vue": "^4.10.1",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "@onesignal/onesignal-vue3": "^2.0.1",
     "@splidejs/vue-splide": "^0.6.12",
     "apexcharts": "^3.44.0",
     "axios": "^1.7.4",
+    "firebase": "^10.14.0",
     "flowbite": "^2.2.1",
     "flowbite-vue": "^0.1.2",
-    "i": "^0.3.7",
     "ionicons": "^7.0.0",
     "npm": "^10.5.1",
     "remove": "^0.1.5",
@@ -58,10 +59,10 @@
     "postcss": "^8.4.38",
     "semver": "^7.6.3",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.1.6",
+    "typescript": "^5.6.2",
     "vite": "^4.3.9",
     "vitest": "^0.32.2",
     "vue-tsc": "^2.0.29"
   },
-  "description": "An Ionic project"
+  "description": "Ionic Project"
 }
