--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "@onesignal/onesignal-vue3": "^2.0.1",
-    "@splidejs/vue-splide": "^0.6.12",
     "apexcharts": "^3.44.0",
     "axios": "^1.7.4",
+    "capacitor-secure-storage-plugin": "^0.9.0",
     "firebase": "^10.14.0",
     "flowbite": "^2.2.1",
     "flowbite-vue": "^0.1.2",
@@ -33,18 +33,22 @@
     "remove": "^0.1.5",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.12.4",
-    "vue": "^3.2.45",
+    "vue": "^3.5.12",
     "vue-localstorage": "^0.6.2",
     "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.4.3",
     "vue-slick-carousel": "^1.0.5",
     "vue-sweetalert2": "^5.0.11",
+    "vue-types": "^5.1.3",
     "vue3-apexcharts": "^1.4.4",
+    "vue3-carousel": "^0.4.0",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.1",
+    "@types/node": "^22.7.9",
+    "@types/ws": "^8.5.12",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
@@ -59,7 +63,7 @@
     "postcss": "^8.4.38",
     "semver": "^7.6.3",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.6.2",
+    "typescript": "^5.6.3",
     "vite": "^4.3.9",
     "vitest": "^0.32.2",
     "vue-tsc": "^2.0.29"
